--- a/support.html
+++ b/support.html
@@ -66,6 +66,7 @@
 			</form>
 		</div>
 	</div>
+	<script type="text/javascript" src="libs/jquery-3.5.1.min.js"></script>
 	<script src="js/support.js"></script>
 </body>
 </html>
