--- a/index.html
+++ b/index.html
@@ -13,88 +13,57 @@
 	<header id="header" class="header">
 		<div class="container">
 			<div class="nav">
-				<img src="img/logo-game.svg" alt="Jack In The High Tower" class="logo">
+				<a href="index.html"><img src="img/logo-game.svg" alt="Jack In The High Tower" class="logo"></a>
 			<div class="GameName">
 				Jack in The Dark Tower
 			</div>
 			<div class="menu">
-				<a href="#">
+				<a href="news.php">
 					<div class="button-news">
 						Новости
 					</div>
 				</a>
 				<div class="dropdown">
-	    				<a href="#" class="dropbtn">
+	    				<a href="training.html" class="dropbtn">
 	    					Об игре 
 	    				</a>
 	   				<div class="dropdown-content">
-	      				<a href="#">Обучение</a>
-	      				<a href="#">Медиа</a>
+	      				<a href="training.html">Обучение</a>
+	      				<a href="media.html">Медиа</a>
 	    			</div>
 	  			</div>
 	  			<div class="dropdown">
-	    				<a href="#" class="dropbtn">
+	    				<a href="community.html" class="dropbtn">
 	    					Общение
 	    				</a>
 	   				<div class="dropdown-content">
-	      				<a href="support.html">Support</a>
-	      				<a href="#">Социальные сети</a>
+	      				<a href="support.html">Поддержка</a>
+	      				<a href="community.html">Социальные сети</a>
 	    			</div>
 	  			</div>
-	  			<a href="#">
-					<div class="button-wiki">
-						WIKI
-					</div>
-				</a>
 			</div>
-			<!-- <ul class="menu">
-				<li>
-					<a href="#">
-						Новости
-					</a>
-				
-				</li>
-				<li>
-					<div class="dropdown">
-	    				<button class="dropbtn">
-	    					Об игре 
-	    				</button>
-	   				<div class="dropdown-content">
-	      				<a href="#">Обучение</a>
-	      				<a href="#">Медиа</a>
-	    			</div>
-	  				</div> 
-
-				</li>
-				<li>
-					<a href="#">
-						Общение
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						WIKI
-					</a>
-				</li>
-			</ul> -->
 			</div>
 		</div>
-	</header>	
-	<section id="preview" class="preview">
-		<div class="container">
-			<div class="brief-description">
-				<img src="img/smartphone-icon.svg" alt="Мобильныая игра">
-				<h1>История о мальчике по имени Джек</h1>
-				<p>Помоги Джеку снять с себя проклятие волшебника и выбраться из тюрьмы</p>
-				<a href="#">Подробнее</a>
+	</header>
+	<div class="preview__color">
+		<section id="preview" class="preview">
+			<div class="container">
+				<div class="brief-description">
+					<img src="img/smartphone-icon.svg" alt="Мобильныая игра">
+					<h1>История о мальчике по имени Джек</h1>
+					<p>Помоги Джеку снять с себя проклятие волшебника и выбраться из заточений темной башни</p>
+					<a href="#description">Подробнее</a>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</div>	
+	<a name="description"></a>
 	<section id="about-us" class="about-us">
 		<div class="container-about-us">
+			<p><a name="description"></a></p> 
 			<div class="information">
 				<img src="img/phone-icon.png" alt="Кадр из игры" class="phone-icon">
-				<img src="img/description-bg.svg" alt="Swords">
+				<img src="img/description-bg.svg" alt="Swords" class="swords-icon">
 				<div class="description">
 					<h2>Описание игры</h2>
 					<p>
@@ -117,16 +86,16 @@
 					arrow">
 				</div>
 				<div class="gallery-top">
-					<a href="img/media-picture-3.png" class="screenshot"><img src="img/media-picture-3.png" alt="Screenshot 1"></a>
+					<a href="img/media-picture-1.png" class="screenshot"><img src="img/media-picture-1.png" alt="Screenshot 1"></a>
 					<a href="img/media-picture-2.png" class="screenshot"><img src="img/media-picture-2.png" alt="Screenshot 2"></a>
 					<a href="img/media-picture-3.png" class="screenshot"><img src="img/media-picture-3.png" alt="Screenshot 3"></a>
 					<a href="img/media-picture-4.png" class="screenshot"><img src="img/media-picture-4.png" alt="Screenshot 4"></a>
 				</div>
 				<div class="gallery-bottom">
-					<a href="img/media-picture-7.png" class="screenshot"><img src="img/media-picture-7.png" alt="Screenshot 5"></a>
-					<a href="img/media-picture-6.png" class="screenshot"><img src="img/media-picture-6.png" alt="Screenshot 6"></a>
-					<a href="img/media-picture-7.png" class="screenshot"><img src="img/media-picture-7.png" alt="Screenshot 7"></a>
-					<a href="img/media-picture-8.png" class="screenshot"><img src="img/media-picture-8.png" alt="Screenshot 8"></a>
+					<a href="img/media-picture-7.png" class="screenshot"><img src="img/media-picture-7.png" alt="Screenshot 5" id="scr__5"></a>
+					<a href="img/media-picture-8.png" class="screenshot"><img src="img/media-picture-8.png" alt="Screenshot 6" id="scr__6"></a>
+					<a href="img/media-picture-9.png" class="screenshot"><img src="img/media-picture-9.png" alt="Screenshot 7" id="scr__7"></a>
+					<a href="img/media-picture-10.png" class="screenshot"><img src="img/media-picture-10.png" alt="Screenshot 8" id="scr__8"></a>
 				</div>
 		</div>
 	</section>
@@ -181,7 +150,7 @@
 				<a href="#"><img src="img/vk-icon.svg" alt="VK"></a>
 				<a href="#"><img src="img/instagram-icon.svg" alt="Instagram"></a>
 				<a href="#"><img src="img/twitch-icon.svg" alt="VK-icon"></a>
-				<a href="#" class="forum-title"><div class="forum-wrap">Форум</div></a>
+				<a href="support.html" class="forum-title"><div class="forum-wrap">Support</div></a>
 			</div>
 		</div>
 	</section>
@@ -190,49 +159,44 @@
 			<div id="footer" class="footer">
 				<ul class="footer-menu">
 					<li>
-						<a href="#">
+						<a href="news.php">
 							Новости
 						</a>
 					</li>	
 					<li>
-						<a href="#">
+						<a href="training.html">
 							Об игре
 						</a>
 						<ul class="footer-submenu">
 							<li>
-								<a href="#">
+								<a href="training.html">
 									Обучение
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="media.html">
 									Медиа
 								</a>
 							</li>
 						</ul>
 					</li>	
 					<li>
-						<a href="#">
+						<a href="community.html">
 							Общение
 						</a>
 						<ul class="footer-submenu">
 							<li>
-								<a href="#">
-									Форум
+								<a href="support.html">
+									Поддержка
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="community.html">
 									Социальные сети
 								</a>
 							</li>
 						</ul>
-					</li>	
-					<li>
-						<a href="#">
-							WIKI
-						</a>
-					</li>	
+					</li>		
 				</ul>
 				<div class="rights">©2020 All rights reserved.</div>
 			</div>
